@@ -15,6 +15,7 @@
 * Wallet: The "-pub <addr>" command should now work with all types of deposit addresses
 * Client: Disconnect peers that have not sent any data within the last 5 minutes
 * Client: New config value "Stat.NoCounters" - to be set for possible performance improvement
+* Client: New config value "WebUI.SSLPort" (previously it was fixed to the default values)
 
 1.10.0 - 2021-12-16
 * Added Taproot support
